# fptools

./: .gitignore  FPUtils.py  Fiber_Photometry_Analysis.ipynb  README.md  alignMags.ipynb  environment.yml  mkdocs.yml  multiple_recording_average.ipynb  normalization.ipynb  progRatioFP.ipynb  pyproject.toml  setup.cfg  versions.json
.github/workflows/: ci.yml  docs.yml
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/basics/: index.html
dev/changelog/: index.html
dev/loading/: index.html
dev/mkdocs/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/fptools/: index.html
dev/search/: search_index.json
dev/session/: index.html
docs/: index.md  loading.md  session.md
fptools/: measure.py
fptools/io/: __init__.py  common.py  data_loader.py  med_associates.py  session.py  signal.py  tdt.py  test.py
fptools/measure/: __init__.py  peaks.py  signal_collector.py  snr.py
fptools/preprocess/: common.py  lib.py
fptools/preprocess/pipelines/: __init__.py  dxp_motion_dff.py  lowpass_dff.py  tdt_default.py
fptools/preprocess/steps/: __init__.py  dff.py  (+10 more)
fptools/viz/: __init__.py  common.py  signal.py  signal_collector.py  viz.py
notebooks/: 01_Data_Loading.ipynb  02_Signal_Basics.ipynb  FP_button_script.m  inventory.ipynb  inventory_with_external_metadata.ipynb  multiple.ipynb  readings.md
notebooks/old/: EPOC1 vs EPOC2.ipynb  FPUtils.py  biexp.ipynb  binning.ipynb  clean_multiple_recordings (1).ipynb  epoch_averaging.ipynb  magazine_bout_filtering.ipynb  metrics.ipynb  perAnimalRecording.ipynb  -print.ipynb  testingScripts.ipynb
notebooks/playground/: first_exploration.ipynb  multiple_day2.ipynb  second_pass.ipynb
scripts/: gen_changelog.py  gen_ref_pages.py
tests/: conftest.py  test_session.py
tests/io/: test_load_data.py  test_session.py  test_signal.py
tests/measure/: test_peaks.py  test_signal_collector.py
tests/viz/: test_viz.py
v0.3.0/: 404.html  index.html  sitemap.xml
v0.3.0/basics/: index.html
v0.3.0/changelog/: index.html
v0.3.0/loading/: index.html
v0.3.0/mkdocs/: index.html
v0.3.0/session/: index.html
(+86 files in other folders)
